# jit_vectorize

./: .gitignore  CMakeLists.txt  README.md  common.h  main.cpp  main_conjunctive.cpp  main_disjunctive.cpp  main_synthesis.cpp  performance.txt  run.sh  todo.txt
bfjit/: bytecodejit.cpp  factor.bf  helloworld.cpp  helloworld_main.cpp  mandelbrot.bf  simple.bf  simpleinterp.cpp  simplevm.cpp
